# SlowCrawl

./: .env.example  .gitignore  README.md  logging_setup.py  main.py  main_test.py  pyproject.toml  register_new_emails.py
utils/: Automation.py  EmailService.py  Exporter.py  PdfGenerator.py  Scraper.py
